# Urocissa

./: .gitignore  LINUX.md  MIGRATION_SUMMARY.md  README.md  TODO.md  WINDOWS.md  build_urocissa_docker.sh  docker-compose.yml  run_urocissa_docker.sh
gallery-backend/: Cargo.toml
gallery-backend/src/: main.rs  migration.rs  tui.rs  utils.rs
gallery-backend/src/api/: mod.rs
gallery-backend/src/api/claims/: hash.rs  mod.rs  timestamp.rs  types.rs
gallery-backend/src/api/fairings/: mod.rs  utils.rs
gallery-backend/src/api/handlers/: album.rs  auth.rs  execute.rs  media.rs  mod.rs  share.rs  system.rs
gallery-backend/src/background/: flows.rs  mod.rs  types.rs
gallery-backend/src/background/actors/: deduplicate.rs  hash.rs  indexer.rs  mod.rs  video_transcode.rs
gallery-backend/src/background/batchers/: expire.rs  flush_query.rs  flush_snapshot.rs  flush_tree.rs  mod.rs  update_tree.rs  watcher.rs
gallery-backend/src/background/processors/: image.rs  metadata.rs  setup.rs  transitor.rs  video.rs
gallery-backend/src/bootstrap/: mod.rs  setup.rs
gallery-backend/src/cli/: tui.rs
gallery-backend/src/common/: errors.rs  mod.rs
gallery-backend/src/common/consts/: mod.rs
gallery-backend/src/database/: mod.rs
gallery-backend/src/models/: mod.rs
gallery-backend/src/operations/: mod.rs
gallery-backend/src/process/: info.rs  initialization.rs  io.rs  mod.rs  transitor.rs
gallery-backend/src/public/: config.rs  error_data.rs  mod.rs  tui.rs
gallery-backend/src/table/: album.rs  database.rs  image.rs  meta_album.rs  meta_image.rs  meta_video.rs  mod.rs  object.rs  video.rs
gallery-backend/src/utils/: io_ext.rs  mod.rs
gallery-backend/src/workflow/: flows.rs  info.rs  mod.rs  types.rs
(+430 files in other folders)
