[package]
name = "urocissa"
version = "0.18.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[profile.dev-release]
inherits = "release"
lto = false

[dependencies]
anyhow = "1.0.100"
arrayvec = { version = "0.7.6", features = ["serde"] }
atomic_float = "1.1.0"
bitcode = { version = "0.6.7", features = ["arrayvec"] }
blake3 = "1.8.2"
bytesize = "2.2.0"
chrono = "0.4.42"
console = "0.16.1"
crossbeam-queue = "0.3.12"
dashmap = { version = "6.1.0", features = ["rayon"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.8", features = ["humantime", "color"] }
envy = "0.4.2"
filetime = "0.2.26"
futures = "0.3.31"
image = "0.25.9"
image_hasher = "3.0.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
kamadak-exif = "0.6.1"
log = { version = "0.4.28", features = ["kv"] }
mime_guess = "2.0"
mini_executor = "2.0.3"
notify = "8.2.0"
num_cpus = "1.17.0"
path-clean = "1.0.1"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_seek_stream = "0.2.6"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
superconsole = "0.2.0"
terminal_size = "0.4.3"
thumbhash = "0.1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rayon = "2.1.0"
unicode-width = "0.2.2"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"